Add theme-aware favicons and update head links

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Light UI -->
+    <link rel="icon" href="/favicons/favicon-light.ico" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/badge-light-32.png"
+        media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/badge-light-16.png"
+        media="(prefers-color-scheme: light)" />
+    <link rel="apple-touch-icon" href="/favicons/badge-light-180.png" media="(prefers-color-scheme: light)" />
+
+    <!-- Dark UI -->
+    <link rel="icon" href="/favicons/favicon-dark.ico" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/badge-dark-32.png"
+        media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/badge-dark-16.png"
+        media="(prefers-color-scheme: dark)" />
+    <link rel="apple-touch-icon" href="/favicons/badge-dark-180.png" media="(prefers-color-scheme: dark)" />
+
+    <!-- Optional PWA -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
+
+
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gaia Lab Clone</title>
+    <title>Pushpendra Dendroclimatology</title>
 </head>
+
 <body>
-<div id="root"></div>
-<script type="module" src="/src/main.jsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
